--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -21,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/google.maps": "^3.58.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,6 +32,7 @@
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-autocomplete": "^2.7.5",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1"
   },
