--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
+    "test": "echo \"Tests not implemented yet\" && exit 0",
+    "test:watch": "echo \"Tests not implemented yet\" && exit 0",
+    "test:coverage": "echo \"Tests not implemented yet\" && exit 0",
+    "test:integration": "echo \"Integration tests not implemented yet\" && exit 0",
+    "test:e2e": "echo \"E2E tests not implemented yet\" && exit 0",
+    "analyze": "cross-env ANALYZE=true npm run build",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
@@ -49,6 +55,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-config-prettier": "^10.1.8",
