--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build --turbopack",
+    "build": "next build --turbopack",
+    "build:full": "npm run db:generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
@@ -12,6 +13,7 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
+    "postinstall": "prisma generate || echo 'Prisma generation skipped'",
     "test": "echo \"Tests not implemented yet\" && exit 0",
     "test:watch": "echo \"Tests not implemented yet\" && exit 0",
     "test:coverage": "echo \"Tests not implemented yet\" && exit 0",
