Fix: Improve CI stability and dependency scanning
- Simplified dependency review to remove jq dependency
- Added fallback environment variables for CI builds
- Improved error handling in security audit step
- Enhanced dependency scanning with better exit code handling
- Added DATABASE_URL fallback for CI environment

Changes:
- .github/workflows/code-quality.yml: Simplified dependency review logic
- .github/workflows/ci.yml: Added environment variable fallbacks
- Ensures CI passes even without all secrets configured

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,8 +81,9 @@ jobs:
       - name: Build application
         run: npm run build
         env:
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'fallback-secret-for-ci-build-only' }}
+          NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
+          DATABASE_URL: "postgresql://user:pass@localhost:5432/testdb"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
