--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
         env:
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'fallback-secret-for-ci-build-only' }}
           NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
-          DATABASE_URL: "postgresql://user:pass@localhost:5432/testdb"
+          DATABASE_URL: 'postgresql://user:pass@localhost:5432/testdb'
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
