Enhancement: Add Local CI Simulation and Improve Development Workflow
- Added comprehensive CI simulation scripts for local testing
- Enhanced package.json with new CI-related npm scripts
- Improved auth.ts configuration with better error handling
- Created pre-commit CI check scripts for Windows and Unix

New Features:
- npm run ci:lint - Local linting and type checking
- npm run ci:build - Local build verification
- npm run ci:security - Local security audit
- npm run ci:full - Complete CI simulation
- npm run pre-push - Pre-push validation

Scripts Added:
- scripts/pre-commit-ci-check.sh - Unix/Linux CI simulation
- scripts/pre-commit-ci-check.ps1 - PowerShell CI simulation

Benefits:
- Catch CI failures locally before pushing
- Faster development cycle with immediate feedback
- Reduced failed CI builds on remote repository
- Better code quality assurance

--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "ci:lint": "npm run lint && npm run format:check && npm run type-check",
+    "ci:build": "npm run build",
+    "ci:security": "npm audit --audit-level=moderate",
+    "ci:full": "npm run ci:lint && npm run ci:security && npm run ci:build",
+    "pre-push": "npm run ci:full"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
