Fix: Add GitHub Actions permissions for deployment workflows
- Added 'pull-requests: write' and 'issues: write' permissions to deploy-staging.yml
- Added 'deployments: write' permission to deploy.yml
- Improved PR comment error handling with try-catch
- Added explicit github-token parameter
- Prevents 'Resource not accessible by integration' errors

Resolves: GitHub Actions permission errors during deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  deployments: write
+
 env:
   NODE_VERSION: '18'
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
