--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "19.1.0",
     "react-google-autocomplete": "^2.7.5",
     "react-redux": "^9.2.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
