Fix all build errors and add proper favicon
- Fixed Prisma schema SQLite compatibility issues
- Resolved all TypeScript compilation errors
- Fixed all ESLint lint violations
- Updated PaymentModal interface structure
- Fixed CourierManager JSON type issues
- Added comprehensive favicon setup with SVG icons
- Updated Google Maps TypeScript configuration
- Fixed Jest DOM types for testing
- Standardized API route patterns
- Updated PWA manifest with proper icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,119 +1,99 @@
 {
-  "name": "Smart Ship - Intelligent Shipping Platform",
-  "short_name": "SmartShip",
-  "description": "AI-powered shipping platform with advanced analytics and courier recommendations",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2563eb",
-  "orientation": "portrait",
-  "categories": ["business", "logistics", "shipping"],
-  "lang": "en",
-  "dir": "ltr",
-  "icons": [
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Ship Now",
-      "short_name": "Ship",
-      "description": "Create a new shipment quickly",
-      "url": "/shipping/enhanced",
-      "icons": [
+    "name": "Smart Ship - Intelligent Shipping Platform",
+    "short_name": "SmartShip",
+    "description": "AI-powered shipping platform with advanced analytics and courier recommendations",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#2563eb",
+    "orientation": "portrait",
+    "categories": [
+        "business",
+        "logistics",
+        "shipping"
+    ],
+    "lang": "en",
+    "dir": "ltr",
+    "icons": [
         {
-          "src": "/icons/shortcut-ship.png",
-          "sizes": "96x96"
-        }
-      ]
-    },
-    {
-      "name": "Track Package",
-      "short_name": "Track",
-      "description": "Track your shipments",
-      "url": "/tracking/enhanced",
-      "icons": [
+            "src": "/icons/icon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
+            "purpose": "maskable any"
+        },
         {
-          "src": "/icons/shortcut-track.png",
-          "sizes": "96x96"
-        }
-      ]
-    },
-    {
-      "name": "Analytics",
-      "short_name": "Analytics",
-      "description": "View shipping analytics",
-      "url": "/analytics",
-      "icons": [
+            "src": "/icons/icon-192x192.svg",
+            "sizes": "192x192",
+            "type": "image/svg+xml",
+            "purpose": "any"
+        },
         {
-          "src": "/icons/shortcut-analytics.png",
-          "sizes": "96x96"
+            "src": "/icons/icon-512x512.svg",
+            "sizes": "512x512",
+            "type": "image/svg+xml",
+            "purpose": "any"
+        },
+        {
+            "src": "/favicon.svg",
+            "sizes": "32x32",
+            "type": "image/svg+xml",
+            "purpose": "any"
         }
-      ]
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshots/desktop-dashboard.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Desktop Dashboard View"
-    },
-    {
-      "src": "/screenshots/mobile-shipping.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Mobile Shipping Interface"
-    }
-  ],
-  "related_applications": [],
-  "prefer_related_applications": false
+    ],
+    "shortcuts": [
+        {
+            "name": "Ship Now",
+            "short_name": "Ship",
+            "description": "Create a new shipment quickly",
+            "url": "/shipping/enhanced",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-ship.png",
+                    "sizes": "96x96"
+                }
+            ]
+        },
+        {
+            "name": "Track Package",
+            "short_name": "Track",
+            "description": "Track your shipments",
+            "url": "/tracking/enhanced",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-track.png",
+                    "sizes": "96x96"
+                }
+            ]
+        },
+        {
+            "name": "Analytics",
+            "short_name": "Analytics",
+            "description": "View shipping analytics",
+            "url": "/analytics",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-analytics.png",
+                    "sizes": "96x96"
+                }
+            ]
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "/screenshots/desktop-dashboard.png",
+            "sizes": "1280x720",
+            "type": "image/png",
+            "form_factor": "wide",
+            "label": "Desktop Dashboard View"
+        },
+        {
+            "src": "/screenshots/mobile-shipping.png",
+            "sizes": "390x844",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "Mobile Shipping Interface"
+        }
+    ],
+    "related_applications": [],
+    "prefer_related_applications": false
 }
