Fix Razorpay environment variable issues for CI/CD
- Move Razorpay initialization inside functions to prevent build-time errors
- Add proper environment variable validation before Razorpay usage
- Update .env.example with required Razorpay and Google Maps variables
- Remove non-null assertions that cause CI build failures
- Ensure graceful handling when environment variables are missing

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,99 +1,95 @@
 {
-    "name": "Smart Ship - Intelligent Shipping Platform",
-    "short_name": "SmartShip",
-    "description": "AI-powered shipping platform with advanced analytics and courier recommendations",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#2563eb",
-    "orientation": "portrait",
-    "categories": [
-        "business",
-        "logistics",
-        "shipping"
-    ],
-    "lang": "en",
-    "dir": "ltr",
-    "icons": [
+  "name": "Smart Ship - Intelligent Shipping Platform",
+  "short_name": "SmartShip",
+  "description": "AI-powered shipping platform with advanced analytics and courier recommendations",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#2563eb",
+  "orientation": "portrait",
+  "categories": ["business", "logistics", "shipping"],
+  "lang": "en",
+  "dir": "ltr",
+  "icons": [
+    {
+      "src": "/icons/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-192x192.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon.svg",
+      "sizes": "32x32",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Ship Now",
+      "short_name": "Ship",
+      "description": "Create a new shipment quickly",
+      "url": "/shipping/enhanced",
+      "icons": [
         {
-            "src": "/icons/icon.svg",
-            "sizes": "any",
-            "type": "image/svg+xml",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "/icons/icon-192x192.svg",
-            "sizes": "192x192",
-            "type": "image/svg+xml",
-            "purpose": "any"
-        },
-        {
-            "src": "/icons/icon-512x512.svg",
-            "sizes": "512x512",
-            "type": "image/svg+xml",
-            "purpose": "any"
-        },
-        {
-            "src": "/favicon.svg",
-            "sizes": "32x32",
-            "type": "image/svg+xml",
-            "purpose": "any"
+          "src": "/icons/shortcut-ship.png",
+          "sizes": "96x96"
         }
-    ],
-    "shortcuts": [
+      ]
+    },
+    {
+      "name": "Track Package",
+      "short_name": "Track",
+      "description": "Track your shipments",
+      "url": "/tracking/enhanced",
+      "icons": [
         {
-            "name": "Ship Now",
-            "short_name": "Ship",
-            "description": "Create a new shipment quickly",
-            "url": "/shipping/enhanced",
-            "icons": [
-                {
-                    "src": "/icons/shortcut-ship.png",
-                    "sizes": "96x96"
-                }
-            ]
-        },
-        {
-            "name": "Track Package",
-            "short_name": "Track",
-            "description": "Track your shipments",
-            "url": "/tracking/enhanced",
-            "icons": [
-                {
-                    "src": "/icons/shortcut-track.png",
-                    "sizes": "96x96"
-                }
-            ]
-        },
-        {
-            "name": "Analytics",
-            "short_name": "Analytics",
-            "description": "View shipping analytics",
-            "url": "/analytics",
-            "icons": [
-                {
-                    "src": "/icons/shortcut-analytics.png",
-                    "sizes": "96x96"
-                }
-            ]
+          "src": "/icons/shortcut-track.png",
+          "sizes": "96x96"
         }
-    ],
-    "screenshots": [
+      ]
+    },
+    {
+      "name": "Analytics",
+      "short_name": "Analytics",
+      "description": "View shipping analytics",
+      "url": "/analytics",
+      "icons": [
         {
-            "src": "/screenshots/desktop-dashboard.png",
-            "sizes": "1280x720",
-            "type": "image/png",
-            "form_factor": "wide",
-            "label": "Desktop Dashboard View"
-        },
-        {
-            "src": "/screenshots/mobile-shipping.png",
-            "sizes": "390x844",
-            "type": "image/png",
-            "form_factor": "narrow",
-            "label": "Mobile Shipping Interface"
+          "src": "/icons/shortcut-analytics.png",
+          "sizes": "96x96"
         }
-    ],
-    "related_applications": [],
-    "prefer_related_applications": false
+      ]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/desktop-dashboard.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Desktop Dashboard View"
+    },
+    {
+      "src": "/screenshots/mobile-shipping.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Mobile Shipping Interface"
+    }
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false
 }
