Revert "Fix Prisma client generation in build process"
This reverts commit c4ed0def8d22e55ce42bddabdb465a4cb1d3c5ec.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build --turbopack",
-    "build:full": "npm run build",
+    "build": "next build --turbopack",
+    "build:full": "npm run db:generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
