--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,7 +2,7 @@ name: Deploy to Staging
 
 on:
   push:
-    branches: [develop]
+    branches: [develop, staging]
   pull_request:
     branches: [main]
     types: [opened, synchronize]
