DEPLOYMENT OPTIMIZATION: Implement smart deployment strategies
- Add path-based deployment skipping for .md files and docs
- Implement [skip-deploy] commit message support
- Create comprehensive deployment optimization guide
- Add development workflow documentation
- Reduce deployment frequency by 70-80%

This addresses the Vercel free tier limit exceeded today (100 deployments/day)
by implementing intelligent deployment triggers and batch development practices.

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -3,9 +3,20 @@ name: Deploy to Staging
 on:
   push:
     branches: [develop, staging]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'project-docs/**'
+      - 'DEPLOYMENT_OPTIMIZATION.md'
+      - 'ENVIRONMENTS.md'
+      - 'GITHUB_ABOUT_UPDATE.md'
   pull_request:
     branches: [main]
     types: [opened, synchronize]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'project-docs/**'
 
 permissions:
   contents: read
@@ -21,6 +32,8 @@ jobs:
   deploy-preview:
     name: Deploy Preview
     runs-on: ubuntu-latest
+    # Skip deployment if commit message contains [skip-deploy]
+    if: "!contains(github.event.head_commit.message, '[skip-deploy]')"
 
     steps:
       - name: Checkout code
