--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,13 @@ name: Deploy to Production
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'project-docs/**'
+      - 'DEPLOYMENT_OPTIMIZATION.md'
+      - 'ENVIRONMENTS.md'
+      - 'GITHUB_ABOUT_UPDATE.md'
   workflow_dispatch:
 
 permissions:
@@ -19,6 +26,8 @@ jobs:
     name: Deploy to Vercel
     runs-on: ubuntu-latest
     environment: production
+    # Skip deployment if commit message contains [skip-deploy]
+    if: "!contains(github.event.head_commit.message, '[skip-deploy]')"
 
     steps:
       - name: Checkout code
