Add local testing tools and guides [skip-deploy]
- Add npm scripts for easy environment switching (test:local, test:staging, test:restore)
- Add PowerShell script (Test-Local.ps1) for Windows development
- Add Bash script (test-local.sh) for cross-platform compatibility
- Add comprehensive LOCAL_TESTING_GUIDE.md documentation
- Enable seamless local development with staging database
- All changes isolated to development workflow - no production impact

These tools allow developers to:
 Switch between local and staging database easily
 Test with real staging data locally
 Maintain environment isolation and safety

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test:coverage": "echo \"Tests not implemented yet\" && exit 0",
     "test:integration": "echo \"Integration tests not implemented yet\" && exit 0",
     "test:e2e": "echo \"E2E tests not implemented yet\" && exit 0",
+    "test:local": "powershell -ExecutionPolicy Bypass -File .\\scripts\\Test-Local.ps1 -Mode local",
+    "test:staging": "powershell -ExecutionPolicy Bypass -File .\\scripts\\Test-Local.ps1 -Mode staging",
+    "test:restore": "powershell -ExecutionPolicy Bypass -File .\\scripts\\Test-Local.ps1 -Mode restore",
     "analyze": "cross-env ANALYZE=true npm run build",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
